--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
   <script src="https://cdn.jsdelivr.net/npm/slim-select@2.6.0/dist/slimselect.min.js"></script>
   <style>
     :root {
-      --bg: #f2f2f7;
-      --text: #111;
-      --card: #fff;
-      --hover: #e2e2e2;
-    }
-    body.dark {
       --bg: #1c1c1e;
       --text: #f2f2f2;
       --card: #2c2c2e;
       --hover: #3a3a3c;
+    }
+    body:not(.dark) {
+      --bg: #f2f2f7;
+      --text: #111;
+      --card: #fff;
+      --hover: #e2e2e2;
     }
     *, *::before, *::after {
       box-sizing: border-box;
@@ -28,7 +28,7 @@
     body {
       display: flex;
       flex-direction: column;
-      height: 100vh;
+      min-height: 100vh;
       font-family: sans-serif;
       color: var(--text);
       background: var(--bg);
@@ -43,15 +43,15 @@
       box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
       z-index: 10;
     }
-    @media (min-width: 600px) {
-      header {
-        flex-wrap: nowrap;
-      }
+    header .title-row {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 100%;
     }
     header h2 {
       font-size: 1.2rem;
       margin: 0;
-      margin-right: 20rem;
       white-space: nowrap;
     }
     .ss-main {
@@ -84,42 +84,28 @@
       border-radius: 6px;
       background: var(--card);
       color: var(--text);
+      cursor: pointer;
     }
     main {
       display: flex;
       flex: 1;
-      overflow: hidden;
+      overflow: auto;
     }
     #list {
       width: 500px;
       overflow-y: auto;
       padding: 0.75rem;
       background: var(--bg);
-      border-right: 0px solid #ddd;
-
-      /* Modern scrollbar */
       scrollbar-width: thin;
       scrollbar-color: #ccc transparent;
     }
     #list::-webkit-scrollbar {
       width: 10px;
     }
-    #list::-webkit-scrollbar-track {
-      background: transparent;
-    }
     #list::-webkit-scrollbar-thumb {
       background-color: #ccc;
       border-radius: 4px;
     }
-
-    /* Dark mode scrollbar */
-    body.dark #list {
-      scrollbar-color: #555 transparent;
-    }
-    body.dark #list::-webkit-scrollbar-thumb {
-      background-color: #555;
-    }
-
     .item {
       display: flex;
       align-items: center;
@@ -128,7 +114,6 @@
       background: var(--card);
       border-radius: 6px;
       cursor: pointer;
-      transition: background 0.1s;
     }
     .item:hover {
       background: var(--hover);
@@ -145,23 +130,29 @@
       flex: 1;
       display: flex;
       flex-direction: column;
-      background: var(--card); 
+      background: var(--card);
     }
     #now {
-      padding: 1rem;      
+      padding: 1rem;
       font-weight: bold;
     }
-    video {
-      flex: 1;
+    .video-wrapper {
+      position: relative;
       width: 98%;
-      height: 100%;
-      background: #000;
       margin-left: 1rem;
-      border: 0px solid #ccc;
+      padding-top: 56.25%;
+      background: #000;
+    }
+    .video-wrapper video {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
     }
     #footer {
       padding: 0.5rem 1rem;
-      background: var(--card);     
+      background: var(--card);
       font-size: 0.85rem;
       text-align: center;
       color: var(--text);
@@ -172,39 +163,98 @@
       height: 100%;
     }
 
-    /* Dark mode SlimSelect fix */
+    /* Dark theme select fixes */
     body.dark .ss-main {
       background-color: var(--card);
       color: var(--text);
       border: 1px solid #666;
     }
     body.dark .ss-main .ss-single-selected,
-    body.dark .ss-main .ss-value {
-      background-color: var(--card);
-      color: var(--text);
-    }
+    body.dark .ss-main .ss-value,
     body.dark .ss-main .ss-content {
       background-color: var(--card);
       color: var(--text);
     }
+
+    @media (max-width: 768px) {
+      header {
+        flex-direction: column;
+        align-items: stretch;
+      }
+      header .title-row {
+        flex-direction: row;
+        justify-content: space-between;
+      }
+      .ss-main {
+        max-width: 100%;
+        margin-bottom: 0.5rem;
+      }
+      input#search {
+        width: 100%;
+        margin-bottom: 0.5rem;
+      }
+      main {
+        flex-direction: column;
+        overflow-y: auto;
+      }
+      #list {
+        width: 100%;
+        max-height: 300px;
+        border-bottom: 1px solid #ddd;
+      }
+      #playerPane {
+        width: 100%;
+      }
+      .video-wrapper {
+        width: 100%;
+        margin-left: 0;
+      }
+      #sideborder {
+        display: none;
+      }
+    }
+
+    @media (max-width: 480px) {
+      header h2 {
+        font-size: 1rem;
+      }
+      .item img {
+        width: 50px;
+        height: 35px;
+        margin-right: 0.5rem;
+      }
+      #now {
+        font-size: 0.95rem;
+        padding: 0.75rem;
+      }
+      #footer {
+        font-size: 0.75rem;
+        padding: 0.5rem;
+      }
+    }
   </style>
 </head>
-<body>
+<body class="dark">
   <header>
-    <h2>📺 World Tv Hub</h2>
+    <div class="title-row">
+      <h2>📺 World Tv Hub</h2>
+      <button onclick="document.body.classList.toggle('dark')">🌓</button>
+    </div>
     <select id="countrySelect"></select>
     <select id="category"></select>
     <input id="search" placeholder="Search Channel..." />
-    <button onclick="document.body.classList.toggle('dark')">🌓</button>
   </header>
 
   <main>
-    <aside id="list">Loading...</aside>
-    <section id="playerPane">        
+    <section id="playerPane">
       <div id="now">Channel Name</div>
-      <video id="player" controls autoplay></video>
-      <footer id="footer"> World Tv Hub 📺 All rights reserved.</footer>
+      <div class="video-wrapper">
+        <video id="player" controls autoplay></video>
+      </div>
+      <footer id="footer">World Tv Hub 📺 All rights reserved.</footer>
     </section>
+
+    <aside id="list">Loading...</aside>
     <div id="sideborder"></div>
   </main>
 
@@ -229,32 +279,13 @@
       channelsDB = channels;
       streams = streamList.filter(s => s.channel && s.url);
 
-      countrySelect.innerHTML = `<option value="all" data-placeholder="false">🌍 All Countries</option>` +
-        countries.map(c => `
-          <option value="${c.code}" data-html='<img src="https://flagcdn.com/w40/${c.code.toLowerCase()}.png" style="width:20px; height:15px; margin-right:6px;">${c.name}'>${c.name}</option>
-        `).join('');
-
+      countrySelect.innerHTML = `<option value="all">🌍 All Countries</option>` +
+        countries.map(c => `<option value="${c.code}">${c.name}</option>`).join('');
       categoryEl.innerHTML = `<option value="all">📁 All Categories</option>` +
         categories.map(c => `<option value="${c.id}">${c.name}</option>`).join('');
 
-      new SlimSelect({
-        select: '#countrySelect',
-        settings: {
-          placeholderText: '🌍 All Countries',
-          showSearch: true,
-          searchPlaceholder: 'Search countries...',
-          allowDeselect: false
-        }
-      });
-
-      new SlimSelect({
-        select: '#category',
-        settings: {
-          placeholderText: '📁 All Categories',
-          showSearch: true,
-          searchPlaceholder: 'Search categories...'
-        }
-      });
+      new SlimSelect({ select: '#countrySelect', settings: { placeholderText: '🌍 All Countries', showSearch: true, searchPlaceholder: 'Search countries...', allowDeselect: false }});
+      new SlimSelect({ select: '#category', settings: { placeholderText: '📁 All Categories', showSearch: true, searchPlaceholder: 'Search categories...' }});
 
       countrySelect.addEventListener('change', refresh);
       categoryEl.addEventListener('change', refresh);
@@ -286,7 +317,6 @@
     function render() {
       const q = searchEl.value.toLowerCase();
       const list = filtered.filter(c => c.name.toLowerCase().includes(q));
-
       listEl.innerHTML = list.length ? list.map(c => `
         <div class="item" onclick="playById('${c.id}')">
           <img src="${c.logo || ''}" onerror="this.src='https://via.placeholder.com/60x40?text=No+Logo'" />
