--- a/index.html
+++ b/index.html
@@ -20,19 +20,27 @@
       --card: #fff;
       --hover: #e2e2e2;
     }
+
     *, *::before, *::after {
       box-sizing: border-box;
       margin: 0;
       padding: 0;
     }
+
+    html, body {
+      height: 100%;
+      overflow: hidden;
+    }
+
     body {
       display: flex;
       flex-direction: column;
-      min-height: 100vh;
       font-family: sans-serif;
       color: var(--text);
       background: var(--bg);
+      min-height: 100dvh;
     }
+
     header {
       display: flex;
       flex-wrap: wrap;
@@ -43,24 +51,29 @@
       box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
       z-index: 10;
     }
+
     header .title-row {
       display: flex;
       align-items: center;
       justify-content: space-between;
       width: 100%;
     }
+
     header h2 {
       font-size: 1.2rem;
       margin: 0;
       white-space: nowrap;
     }
+
     .ss-main {
       max-width: 300px;
       flex-shrink: 0;
     }
+
     .ss-main .ss-single-selected {
       padding: 0.5rem;
     }
+
     .ss-main .ss-value-text img {
       vertical-align: middle;
       margin-right: 6px;
@@ -68,6 +81,7 @@
       height: 15px;
       border-radius: 2px;
     }
+
     input#search {
       flex-grow: 1;
       min-width: 160px;
@@ -78,6 +92,7 @@
       color: var(--text);
       font-size: 0.95rem;
     }
+
     button {
       padding: 0.5rem;
       border: 1px solid #ccc;
@@ -86,11 +101,14 @@
       color: var(--text);
       cursor: pointer;
     }
+
     main {
       display: flex;
       flex: 1;
-      overflow: auto;
+      overflow: hidden;
+      min-height: 0;
     }
+
     #list {
       width: 500px;
       overflow-y: auto;
@@ -99,13 +117,16 @@
       scrollbar-width: thin;
       scrollbar-color: #ccc transparent;
     }
+
     #list::-webkit-scrollbar {
       width: 10px;
     }
+
     #list::-webkit-scrollbar-thumb {
       background-color: #ccc;
       border-radius: 4px;
     }
+
     .item {
       display: flex;
       align-items: center;
@@ -114,10 +135,13 @@
       background: var(--card);
       border-radius: 6px;
       cursor: pointer;
+      transition: background 0.1s;
     }
+
     .item:hover {
       background: var(--hover);
     }
+
     .item img {
       width: 60px;
       height: 40px;
@@ -126,49 +150,63 @@
       border-radius: 4px;
       background: #fff;
     }
+
     #playerPane {
       flex: 1;
       display: flex;
       flex-direction: column;
       background: var(--card);
-    }
-    #now {
       padding: 1rem;
-      font-weight: bold;
+      overflow-y: auto;
     }
+
+    #now {
+      font-weight: bold;
+      margin-bottom: 0.5rem;
+    }
+
     .video-wrapper {
       position: relative;
-      width: 98%;
-      margin-left: 1rem;
-      padding-top: 56.25%;
+      width: 100%;
+      aspect-ratio: 16 / 9;
       background: #000;
+      margin-bottom: 1rem;
+      overflow: hidden;
     }
-    .video-wrapper video {
+
+    video {
       position: absolute;
-      top: 0;
-      left: 0;
+      inset: 0;
       width: 100%;
       height: 100%;
+      background: #000;
+      border: none;
+      object-fit: cover;
     }
+
     #footer {
-      padding: 0.5rem 1rem;
+      flex-shrink: 0;
       background: var(--card);
       font-size: 0.85rem;
       text-align: center;
       color: var(--text);
+      padding: 0.75rem 1rem;
+      border-top: 1px solid #ddd;
+
     }
+
     #sideborder {
       width: 30px;
       background: var(--card);
       height: 100%;
     }
 
-    /* Dark theme select fixes */
     body.dark .ss-main {
       background-color: var(--card);
       color: var(--text);
       border: 1px solid #666;
     }
+
     body.dark .ss-main .ss-single-selected,
     body.dark .ss-main .ss-value,
     body.dark .ss-main .ss-content {
@@ -181,34 +219,30 @@
         flex-direction: column;
         align-items: stretch;
       }
-      header .title-row {
-        flex-direction: row;
-        justify-content: space-between;
-      }
-      .ss-main {
-        max-width: 100%;
-        margin-bottom: 0.5rem;
-      }
+
+      .ss-main,
       input#search {
-        width: 100%;
+        width: 100% !important;
+        max-width: 100% !important;
         margin-bottom: 0.5rem;
       }
+
       main {
         flex-direction: column;
-        overflow-y: auto;
       }
+
       #list {
         width: 100%;
-        max-height: 300px;
+        max-height: 250px;
+        overflow-y: auto;
         border-bottom: 1px solid #ddd;
       }
-      #playerPane {
-        width: 100%;
+
+      .item img {
+        width: 50px;
+        height: 35px;
       }
-      .video-wrapper {
-        width: 100%;
-        margin-left: 0;
-      }
+
       #sideborder {
         display: none;
       }
@@ -218,15 +252,11 @@
       header h2 {
         font-size: 1rem;
       }
-      .item img {
-        width: 50px;
-        height: 35px;
-        margin-right: 0.5rem;
-      }
+
       #now {
         font-size: 0.95rem;
-        padding: 0.75rem;
       }
+
       #footer {
         font-size: 0.75rem;
         padding: 0.5rem;
@@ -251,12 +281,13 @@
       <div class="video-wrapper">
         <video id="player" controls autoplay></video>
       </div>
-      <footer id="footer">World Tv Hub 📺 All rights reserved.</footer>
     </section>
 
     <aside id="list">Loading...</aside>
     <div id="sideborder"></div>
   </main>
+
+  <footer id="footer">World Tv Hub 📺 All rights reserved.</footer>
 
   <script>
     const countrySelect = document.getElementById('countrySelect'),
@@ -281,11 +312,12 @@
 
       countrySelect.innerHTML = `<option value="all">🌍 All Countries</option>` +
         countries.map(c => `<option value="${c.code}">${c.name}</option>`).join('');
+
       categoryEl.innerHTML = `<option value="all">📁 All Categories</option>` +
         categories.map(c => `<option value="${c.id}">${c.name}</option>`).join('');
 
-      new SlimSelect({ select: '#countrySelect', settings: { placeholderText: '🌍 All Countries', showSearch: true, searchPlaceholder: 'Search countries...', allowDeselect: false }});
-      new SlimSelect({ select: '#category', settings: { placeholderText: '📁 All Categories', showSearch: true, searchPlaceholder: 'Search categories...' }});
+      new SlimSelect({ select: '#countrySelect', settings: { showSearch: true, allowDeselect: false }});
+      new SlimSelect({ select: '#category', settings: { showSearch: true }});
 
       countrySelect.addEventListener('change', refresh);
       categoryEl.addEventListener('change', refresh);
@@ -330,7 +362,10 @@
       nowEl.textContent = `▶ ${c.name}`;
       if (window.hls) window.hls.destroy();
       if (Hls.isSupported()) {
-        const hls = new Hls(); hls.loadSource(c.url); hls.attachMedia(video); window.hls = hls;
+        const hls = new Hls();
+        hls.loadSource(c.url);
+        hls.attachMedia(video);
+        window.hls = hls;
       } else {
         video.src = c.url;
       }
